--- a/config/database.yml
+++ b/config/database.yml
@@ -1,14 +1,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
-  url: <%= ENV['DATABASE_URL'] %>
+  pool: 5
+  username: <%= ENV.fetch("POSTGRES_USER", "postgres") %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD", "password") %>
+  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
 
 development:
   <<: *default
+  database: <%= ENV.fetch("DATABASE_NAME", "myapp_development") %>
 
 test:
   <<: *default
-
-production:
-  <<: *default
+  database: <%= ENV.fetch("DATABASE_NAME", "myapp_test") %>
