Added student model; Added student login; Updated routes.

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,22 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: 5
-  username: <%= ENV.fetch("POSTGRES_USER", "postgres") %>
-  password: <%= ENV.fetch("POSTGRES_PASSWORD", "password") %>
-  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
+  username: postgres
+  password: password
+  host: db
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: <%= ENV.fetch("DATABASE_NAME", "myapp_development") %>
+  database: myapp_development
 
 test:
   <<: *default
-  database: <%= ENV.fetch("DATABASE_NAME", "myapp_test") %>
+  database: myapp_test
+
+production:
+  <<: *default
+  database: myapp_production
+  username: <%= ENV['PROD_DB_USERNAME'] %>
+  password: <%= ENV['PROD_DB_PASSWORD'] %>
+  host: <%= ENV['PROD_DB_HOST'] %>
