--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,32 @@ version: '3.9'
 services:
   db:
     image: postgres:15
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: myapp_development
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
   web:
-    build: .
+    build:
+      context: .
+      args:
+        RAILS_ENV: development
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b 0.0.0.0"
     volumes:
-      - .:/app
+      - .:/app:cached
     ports:
       - "3000:3000"
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/postgres
+      RAILS_ENV: development
+      DATABASE_URL: postgres://postgres:password@db:5432/myapp_development
+    restart: unless-stopped
 
 volumes:
   db-data:
